# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice-export"
version = "0.1.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Export CLInvoice data to different file formats."

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/clinvoice-export"

[dependencies]
clinvoice-error = {branch = "release/0.3", git = "https://github.com/Iron-E/clinvoice-error"}
clinvoice-finance = {branch = "release/0.4", git = "https://github.com/Iron-E/clinvoice-finance"}
clinvoice-schema = {branch = "release/0.9", git = "https://github.com/Iron-E/clinvoice-schema"}

strum = {features = ["derive"], version = "0.24"}
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = ["markdown"]
markdown = []
