# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice-export"
version = "0.1.12"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Export CLInvoice data to different file formats."

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/clinvoice-export"

[dependencies]
clinvoice-schema = {branch = "release/0.10", git = "https://github.com/Iron-E/clinvoice-schema"}

money2 = "0.6"
strum = {features = ["derive"], version = "0.24"}
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = ["markdown"]
markdown = []
