# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "winvoice-export"
version = "0.5.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Export Winvoice data to different file formats."

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/winvoice-export"

[dependencies]
thiserror = "1"

[dependencies.winvoice-schema]
branch = "release/0.14"
git = "https://github.com/Iron-E/winvoice-schema"

[dependencies.strum]
features = ["derive"]
version = "0.24"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = ["markdown"]
markdown = []
